Nav z-index issue fix

--- a/style/nav.css
+++ b/style/nav.css
@@ -62,6 +62,7 @@ nav ul li {
     min-width: 30vw;
     font-size: 18px;
     font-family: "Open Sans";
+    z-index: 255;
 }
 
 .sidenav a {
@@ -77,7 +78,6 @@ nav ul li {
 
 .active {
     transform: translate(0);
-    z-index: 55;
 }
 .black_ {
     display: block;
@@ -88,7 +88,7 @@ nav ul li {
     top: 0;
     left: 0;
     transition: background-color 0.5s 0.2s ease-in-out;
-    z-index: 20;
+    z-index: 220;
     pointer-events: none;
 }
 
@@ -99,7 +99,7 @@ nav ul li {
 
 .humburger {
     display: none;
-    z-index: 100;
+    z-index: 260;
     display: block;
     cursor: pointer;
     fill: var(--color);
